# king-tensor

./: .gitignore  main.py  package-lock.json  pyproject.toml
.ipynb_checkpoints/: test-checkpoint.ipynb
config/: ui.yaml
data/card_classifier/: labels_12-03.csv
king_tensor/: __init__.py  cli.py  gamestate.py  globals.py  main.py  screen.py
king_tensor/config/: alt.yaml  gamestate.yaml  ui.yaml
king_tensor/models/: __init__.py  card_predictor.py  model_v2.pth
king_tensor/models/v1/: __init__.py  pbs_naive.pth  v1.py
king_tensor/models/v2/: model_v2.pth  v2.py
king_tensor/utils/: boxer.py  calibrate.py  dataclean.py  help.py
notebooks/: elixir_detection.ipynb  hand_matching.ipynb
notebooks/.ipynb_checkpoints/: elixir_detection-checkpoint.ipynb  hand_matching-checkpoint.ipynb
notebooks/models/: card_classifier.ipynb
notebooks/models/.ipynb_checkpoints/: card_classifier-checkpoint.ipynb
notebooks/models/card_classifier/: card_classifier.ipynb  card_classifier_v2.ipynb
notebooks/models/card_classifier/.ipynb_checkpoints/: card_classifier-checkpoint.ipynb  card_classifier_v2-checkpoint.ipynb  card_deck_download-checkpoint.ipynb
