[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "king-tensor"
version = "0.1.0"
description = "Dominate Clash Royale with AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
boxer = "king_tensor.utils.boxer:main"
kt-help = "king_tensor.utils.help:main"

[tool.setuptools]
packages = ["king_tensor"]
